--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ h3 {
 
 .container {
   background-color: hsl(185, 41%, 84%);
+  height: 100dvh;
 }
 
 .card {
@@ -152,4 +153,30 @@ button {
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+}
+
+@media (min-width: 768px) {
+  .container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .card {
+    flex-direction: row;
+    height: -moz-max-content;
+    height: max-content;
+    border-radius: 20px;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .result {
+    width: 100%;
+  }
+  .grid {
+    grid-template-columns: repeat(3, 100px);
+  }
+  img {
+    height: auto;
+  }
 }/*# sourceMappingURL=style.css.map */
